cluster/apps/gitlab/gitlab/garage-ui/networkpolicies/enyvoy-gateway-egress-garage-webui.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-garage-webui
  namespace: network
spec:
  description: Allow all gateway egress traffic to garage-webui
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: garage-webui
            app.kubernetes.io/component: webui
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "3909"
              protocol: TCP
